# axum-elm-portfolio

./: README.md  docker-compose.yaml
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
backend/migrations/: 20240110090956_create_table.sql  20240111102311_adduser.sql  20240302123040_blog.sql
backend/scripts/: initial_data.sql  start-docker.sh  start.sh
backend/src/: configuration.rs  lib.rs  main.rs
backend/src/routes/: about.rs  blog.rs  career.rs  mod.rs  skill.rs
frontend/: .gitignore  Dockerfile  README.md  elm.json
frontend/public/: index.html  portfolio.css
frontend/src/: Config.elm  UI.elm
frontend/src/Pages/: About.elm  Blog.elm  Career.elm  Home_.elm  Skill.elm
frontend/src/Pages/Blog/: Id_.elm
